# CppCX

./: CMakeLists.txt  README.md  main.cpp
cmake/: cppcx_conf.hpp.in
cppcx/: CMakeLists.txt  cppcx.cpp  execute.cpp  future.cpp  future_execute.cpp
include/cppcx/: cppcx.hpp  execute.hpp  future.hpp  future_execute.hpp  result.hpp
test/: CMakeLists.txt  async.cpp  echo.cpp  future.cpp  future_test.cpp  sync.cpp  sync_test.cpp
test/test_commands/: late_std_in.cpp  print.cpp  std_in.cpp  wait.cpp
